--- a/YouTubePlayer/build.gradle
+++ b/YouTubePlayer/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.artifactory'
+apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -21,5 +23,40 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:27.0.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+}
+
+def libraryGroupId = 'com.tictapps'
+def libraryArtifactId = 'YouTubePlayer'
+def libraryVersion = '1.0.2'
+
+publishing {
+    publications {
+        aar(MavenPublication) {
+            groupId libraryGroupId
+            version libraryVersion
+            artifactId libraryArtifactId
+
+            artifact("$buildDir/outputs/aar/YouTubePlayer-release.aar")
+        }
+    }
+}
+
+artifactory {
+    contextUrl = 'http://artifactory.tictapps.com/artifactory'
+    publish {
+        repository {
+            repoKey = 'tictapps'
+
+            username = artifactory_username
+            password = artifactory_password
+        }
+        defaults {
+            publications('aar')
+            publishArtifacts = true
+
+            properties = ['qa.level': 'basic', 'q.os': 'android', 'dev.team': 'core']
+            publishPom = true
+        }
+    }
 }
